    これは PEAR が、OS_WINDOWS 定数が再定義されているかをチェックしていないため
- 国際化メッセージの生成支援機構として、i18n コマンドを実装
-- gettext, Ethna組み込みのメッセージカタログに対応
-- ethna i18n [-b|--basedir=dir] [-l|--locale] [-g|--gettext] [extdir1] [extdir2] ...
-- メッセージファイルが存在する場合は、Ethna 組み込みのメッセージカタログの場合は、既存の翻訳
   を自動的にマージする。gettext の場合は、新たにファイルを生成し、msgmerge プログラムを使って
   翻訳を既存のものとマージするように促す
- 配布する Smarty を 2.6.20 に追随

*** bug fix

- テストディレクトリの変更のタイミングによっては、Ethna_UnitTestMangerがWARNINGを出す問題を回避 (thanks: maru_cc)
- selected="selected" の修正漏れを修正 (thanks:maru_cc) 
- [Breaking B.C] Ethna_Plugin_CacheManager_Memcache の接続デフォルトが persistent になっていたのを通常接続に変更
-- [appid]/etc/[appid]-ini.php の memcache_use_connect 設定を memcache_use_pconnect に変更
- プラグインのクラス名にアンダーバーを許していなかったが、PHPのクラス名的に正当な文字であればOKにするように変更(thanks:maru_cc)
- Ethna_I18N.php で、メッセージをパースする際に空行を見逃していたバグを修正

** 2.5.0-preview1

*** features

- ソースコード全体をUTF-8化
-- 但し、日本語のソースコードコメントはそのまま
-- [Breaking B.C] フレームワークで扱う内部エンコーディング(mb_internal_encoding)もデフォルトはUTF-8に変更。但し、これは Ethna_Controller#_getDefaultLanguage
   をオーバーライドし、クライアントエンコーディングの値を変えることで変更可能です。
-- 内部エンコーディングの変更に伴い、動作しなくなった箇所を修正
--- Ethna_Plugin_Validator_Min.php
--- Ethna_Plugin_Validator_Max.php
--- VAR_TYPE_STRING の場合の、最大値最小値のプラグインを再編し、
    マルチバイトのものとそうでないものを分離。互換性確保用途のプラグインも追加
---- Ethna_Plugin_Validator_MbStrMax.php     (マルチバイト文字列最大値)
---- Ethna_Plugin_Validator_MbStrMin.php     (マルチバイト文字列最小値)
---- Ethna_Plugin_Validator_StrMax.php       (シングルバイト文字列最大値)
---- Ethna_Plugin_Validator_StrMin.php       (シングルバイト文字列最小値)
---- Ethna_Plugin_Validator_StrMaxCompat.php (2.3.x までの互換性確保用)
---- Ethna_Plugin_Validator_StrMinCompat.php (2.3.x までの互換性確保用)
-- 内部エンコーディングの変更に伴う動作の変更
--- Ethna_Plugin_Validator_Mbregexp のデフォルトのエンコーディングは、クライアントエンコーディングが仮定されます。デフォルトはUTF-8です。
- 国際化 (i18n) のための機能追加および変更
-- [Breaking B.C] 言語名として解釈していた部分をロケール名に変更
--- これにより、[appid]template/ja, [appid]/locale/ja の「ja」の部分が ja_JP に置き換わります。よって、古いバージョンから移行する場合はディレクトリ名の変更が必要です。
--- Ethna_ViewClass に、言語切り替え用の _setLanguage メソッドを追加 (protected)